# cloudflare-frontend

./: README.md  main.py  pyproject.toml
templates/: base.html  edit.html  index.html  new.html
